K8s-manifest/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: logicmatrix
  labels:
    app: frontend
    project: logicmatrix
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: frontend
        project: logicmatrix
    spec:

      containers:
        - name: frontend
          image: nanil0034/logicmatrix-frontend:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /nginx-health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
            successThreshold: 1
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /nginx-health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 20
            failureThreshold: 3
            successThreshold: 1
            timeoutSeconds: 3
          resources:
            requests:
              cpu: "50m"
              memory: "32Mi"
            limits:
              cpu: "100m"
              memory: "64Mi"
      terminationGracePeriodSeconds: 30
