K8s-manifest/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: logicmatrix
  labels:
    app: backend
    project: logicmatrix
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
